js/js.translator/testData/incremental/invalidation/objectInitializationMoveBetweenFiles/lib1/first.0.kt
object X {
    init {
        result = "A0"
    }

    fun touch() {
    }
}
